# experiment_design_evaluation

./: 04_evaluate_theoretical_values.ipynb  98_exploration_binary_response.ipynb  99_exploration_misc.ipynb  Pipfile  README.md  evaluate_theoretical_values.ipynb  pyproject.toml
output/: README.md  normal_allsample_MDES_1592012138.pickle  normal_allsample_MDES_1592014742.pickle  normal_allsample_MDES_1592015842.pickle  normal_allsample_MDES_1592025374.pickle  normal_allsample_MDES_1592027261.pickle  normal_allsample_MDES_1592033137.pickle  normal_allsample_MDES_1592035299.pickle  normal_allsample_MDES_1592042073.pickle  normal_allsample_MDES_1592045413.pickle  normal_allsample_MDES_1592049357.pickle  normal_allsample_MDES_1592054560.pickle  normal_allsample_MDES_1592058314.pickle  normal_allsample_MDES_1592061675.pickle  normal_allsample_MDES_1592063211.pickle  normal_allsample_MDES_1592065316.pickle  normal_allsample_MDES_1592067488.pickle  normal_allsample_MDES_1592068365.pickle  normal_allsample_MDES_1592069123.pickle  normal_allsample_MDES_1592069182.pickle  normal_allsample_MDES_1592073901.pickle  normal_allsample_MDES_1592075059.pickle  normal_allsample_MDES_1592076958.pickle  normal_allsample_MDES_1592081171.pickle  normal_allsample_MDES_1592082931.pickle  normal_allsample_MDES_1592083808.pickle  normal_allsample_MDES_1592091324.pickle  normal_allsample_MDES_1592091991.pickle  normal_allsample_MDES_1592092354.pickle  normal_allsample_MDES_1592094379.pickle  normal_allsample_MDES_1592094431.pickle  normal_allsample_MDES_1592095625.pickle  (+294 more)
pedeval/: evaluation.py  (+3 more)
(+10 files in other folders)
