[tool.poetry]
name = "experiment-design-evaluation"
version = "0.1.0"
description = "An evaluation framework for personaliszation strategy experiment designs"
authors = ["Bryan Liu"]
readme = "README.md"
packages = [{include = "pedeval"}]

[tool.poetry.dependencies]
python = "^3.9,<3.12"
numpy = "^1.24.3"
scipy = "^1.10.1"
pandas = "^2.0.1"
jupyter = "^1.0.0"
matplotlib = "^3.7.1"
pyarrow = "^12.0.0"
pytest = "^7.3.1"
noisyopt = "^0.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
